--- a/_code/_promo/_assets/stylesheets/header.scss
+++ b/_code/_promo/_assets/stylesheets/header.scss
@@ -1,18 +1,21 @@
 header {
   position: relative;
-  height: 799px;
+  height: $column * 8;
   padding: $baseline * 5 0;
   background: white url('/_assets/images/individual-home-bg.jpg') no-repeat center 0 fixed;
   border-bottom: 2px solid $darkest-gray;
   overflow: hidden;
   text-align: center; // centers the learn more button
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $bp-large) {
     background-size: cover;
   }
 }
 
 a[role=top-nav] {
-  @include position(absolute, 0px 0px 0 0);
+  @include position(absolute, 0px $gutter 0 0);
+  @media screen and (min-width: $bp) {
+    @include position(absolute, 0px 0px 0 0);
+  }
 }
 
 .bottom-button {
@@ -27,20 +30,23 @@ a[role=start-parallax] {
   display: block;
   width: 186px;
   height: 87px;
-  margin: 0 0 ($baseline * 4 - 4) -64px;
+  margin: 0 0 ($baseline * 4 - 4);
   background: transparent url('/_assets/images/logo@2x.png') no-repeat 0 0;
   background-size: 186px 87px;
   h1 {
     text-indent: -9999px;
   }
+  @media screen and (min-width: $bp) {
+    margin: 0 0 ($baseline * 4 - 4) -64px;
+  }
 }
 
 .m-pitch {
+  width: 100%;
   color: white;
   text-align: left;
   > h1 {
     @include font-size(3.2);
-    width: ($column * 5) + ($gutter * 6);
     margin-bottom: $baseline * 4;
     line-height: 1.3125;
     text-shadow: 2px 2px 2px transparentize($blue, 0.6);
@@ -54,5 +60,8 @@ a[role=start-parallax] {
     margin-bottom: $baseline * 4 - 5;
     line-height: 1.25; // 25px
     text-shadow: 0px 1px 1px $blue;
+  }
+  @media screen and (min-width: $bp) {
+    width: ($column * 5) + ($gutter * 6);
   }
 }
