--- a/_code/_promo/_assets/stylesheets/main.scss
+++ b/_code/_promo/_assets/stylesheets/main.scss
@@ -3,8 +3,10 @@
 @import 'base';
 @import 'constants';
 @import 'header';
+@import 'footer';
 @import 'button';
 @import 'form';
+@import 'imgs';
 
 .franc-text {
   color: $pink;
@@ -26,14 +28,36 @@
 .full-width {
   @include clearfix;
   position: relative;
-  width: ($column * 8) + ($gutter * 7);
-  margin: 0 auto;
-  padding: ($baseline * 19) 0;
+  width: 100%;
+  padding: ($baseline * 19) $gutter;
+
+  @media screen and (min-width: $bp) {
+    width: ($column * 6) + ($gutter * 5);
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: $bp-large) {
+    width: ($column * 8) + ($gutter * 7);
+  }
 }
 
 .full-width--header {
   @extend .full-width;
-  padding: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  @media screen and (min-width: $bp) {
+    padding: 0;
+  }
+}
+
+.full-width--update {
+  @extend .full-width;
+  padding: ($baseline * 19) 0 ($baseline * 19 - 44);
+}
+
+.full-width--contact {
+  @extend .full-width;
+  padding: 0 0 ($baseline * 3 + 1);
 }
 
 .full-width--footer {
@@ -59,7 +83,7 @@
 
 .m-mod--story {
   @extend .m-mod;
-  width: ($column * 6) + ($gutter * 5);
+  width: 100%;
   margin: 0 auto;
   margin-bottom: -110px;
   padding-top: $baseline * 12 - 5;
@@ -71,6 +95,9 @@
     font-weight: $font-light;
     line-height: 1.3125;
     &:last-child { margin-bottom: 0;}
+  }
+  @media screen and (min-width: $bp) { 
+    width: ($column * 6) + ($gutter * 5);
   }
 }
 
@@ -84,188 +111,6 @@
   float: left;
 }
 
-.image {
-  display: block;
-  width: 100%;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-
-.image--screenshot {
-  @extend .image;
-  width: ($column * 2.75);
-  height: auto;
-  background-size: 377px 620px;
-}
-
-.image--marker {
-  @extend .image;
-  width: auto;
-}
-
-#story-bg {
-  height: 281px;
-  background-image: url('../images/story-image@2x.png');
-  background-size: 1200px 281px;
-  @media screen and (min-width: 1200px) {
-    height: 371px;
-    background-size: cover;
-  }
-}
-
-#add-sh {
-  // background-image: url('../images/add-friends@2x.png');
-}
-
-#map-sh {
-  float: right;
-  // background-image: url('../images/use-the-map@2x.png');
-  // background-position: right;
-}
-
-#stay-put-sh {
-  //background-image: url('../images/ask-for-a-stay-put@2x.png');
-}
-
-#white-franc {
-  @include position(absolute, 0 0px 0px 0);
-  height: 311px;
-  background-image: url('../images/white-franc@2x.png');
-  background-size: 274px 311px;
-  background-position: bottom right;
-}
-
-#met-up-group {
-  height: 374px;
-  margin-top: -374px;
-  background-image: url('../images/together-at-last@2x.png');
-  background-position: right;
-  background-size: 614px 374px;
-}
-
-#marker-1 {
-  @include position(absolute, 0 0 (-$baseline) 0px);
-  height: $column + $baseline;
-}
-
-#marker-2 {
-  @include position(absolute, 0 0px ($baseline * 2) 0);
-  height: $column - ($gutter - 1);
-}
-
-#marker-3 {
-  @include position(absolute, 0 0 ($baseline * 18.6666667) ($baseline * 60));
-  height: $baseline * 11 + 4;
-}
-
-#marker-4 {
-  @include position(absolute, 0 0 ($baseline * 46) ($baseline * 30));
-  height: $baseline * 9;
-}
-
-#marker-5 {
-  @include position(absolute, 0 0 ($baseline * 57.8333333) ($baseline * 90));
-  height: $baseline * 6 + 1;
-}
-
-footer {
-  background: white;
-}
-
-.m-update {
-  width: ($column * 6) + ($gutter * 5);
-  //margin-bottom: $baseline * 17;
-  > h3 {
-    @include font-size(3.2);
-    margin: 0 0 ($baseline * 10);
-    line-height: 1.3125;
-  }
-  > p {
-    @include font-size(2);
-    line-height: 1.25; // 25px
-    color: $darker-gray;
-    margin-bottom: ($baseline * 8);
-  }
-}
-
-.contact {
-  margin-bottom: $baseline * 6;
-}
-
-.contact-link {
-  @include font-size(1.2);
-  @include transition (all $animation-duration ease-in-out);
-  position: relative;
-  margin-right: $baseline * 5;
-  padding-top: $baseline * 5;
-  color: $gray;
-  text-shadow: 1px 1px 0px transparentize(white, 0.25), -1px -1px 1px transparentize(white, 0.25);
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  &:before {
-    @include font-size(2.4);
-    @include position(absolute, 0px 0px 0 0);
-    width: 100%;
-    content: "\e7d7";
-    font-family: $font-stack-social;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    text-align: center;
-    speak: none;
-    -webkit-font-smoothing: antialiased;
-  }
-  &:last-child { margin-right: 0;}
-}
-
-.contact-link--email {
-  @extend .contact-link;
-  &:before {
-    font-family: $font-stack-icons;
-    content: "\e494";
-  }
-}
-
-.contact-link--twitter {
-  @extend .contact-link;
-  &:before {
-    content: "\e7d1";
-  }
-}
-
-.contact-link--dribbble {
-  @extend .contact-link;
-  &:before {
-    content: "\e7d7";
-  }
-}
-
-.m-subnav {
-  @include font-size(2);
-  margin-bottom: $baseline * 3;
-  line-height: 1.25; // 25px
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  > a {
-    display: inline-block;
-    margin-right: $baseline * 5;
-    color: $dark-gray;
-    &:last-child { margin-right: 0;}
-  }
-}
-
-small {
-  @include font-size(1.4);
-  line-height: 0.77777778; // 18px
-  color: $light-gray;
-}
-
-.m-divider {
-  margin-bottom: $baseline * 10;
-  display: block;
-  border: 1px dashed $lightest-gray;
-}
 .is-hidden {
   opacity: 0;
   display: none;
