--- a/_code/_promo/_assets/stylesheets/imgs.scss
+++ b/_code/_promo/_assets/stylesheets/imgs.scss
@@ -8,12 +8,18 @@
 
 .image--screenshot {
   @extend .image;
+  position: relative;
+  z-index: 2;
   width: ($column * 2);
   height: auto;
   margin: 0 auto;
   @media screen and (min-width: $bp) {
     width: ($column * 2.75);
     margin: 0;
+  }
+
+  @media screen and (min-width: $bp-larger) { 
+    width: ($column * 3.5);
   }
 }
 
@@ -87,4 +93,12 @@
 #marker-5 {
   @include position(absolute, 0 0 ($baseline * 57.8333333) ($baseline * 90));
   height: $baseline * 6 + 1;
+}
+
+.for-festivals {
+  #met-up-group {
+    float: right;
+    width: auto;
+    margin-top: 0;
+  }
 }
